# SOLID-Principles-Brush-Up

./: .env.example  .gitignore  README.md  plan_of_action.md
app/: main.py
app/core/: config.py
app/routers/: health.py
chatbot-backend/: pyproject.toml
chatbot-backend/app/: main.py
chatbot-backend/app/api/v1/routes/: health.py
