[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Production-grade async chatbot backend built with FastAPI"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic-settings>=2.10.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]